--- a/index.html
+++ b/index.html
@@ -4,26 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Open Random URL</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
+            background: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        header {
+            background: #4CAF50;
+            color: white;
+            padding: 10px 0;
             text-align: center;
-            margin-top: 50px;
+        }
+        .container {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
         }
         button {
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 15px 30px;
+            font-size: 18px;
+            color: white;
+            background-color: #4CAF50;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #45a049;
         }
         #message {
             margin-top: 20px;
-            font-size: 18px;
+            font-size: 1.2em;
+        }
+        footer {
+            background: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
         }
     </style>
 </head>
 <body>
-    <h1>Open a Random URL</h1>
-    <button onclick="openRandomUrl()">Open Random URL</button>
-    <p id="message"></p>
+    <header>
+        <h1>Welcome to Random Saved URL Opener</h1>
+    </header>
+    <div class="container">
+        <h1>Open a Random Saved URL</h1>
+        <button onclick="openRandomUrl()">Open Random Saved URL</button>
+        <p id="message"></p>
+    </div>
+    <footer>
+        <p>&copy; 2024 Random URL Opener. All rights reserved.</p>
+    </footer>
 
     <script>
         async function fetchUrls() {
