--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             min-height: 100vh;
         }
         header {
-            background: #4CAF50;
+            background: #817ed3;
             color: white;
             padding: 10px 0;
             text-align: center;
@@ -37,21 +37,21 @@
             padding: 15px 30px;
             font-size: 18px;
             color: white;
-            background-color: #4CAF50;
+            background-color: #817ed3;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
         button:hover {
-            background-color: #45a049;
+            background-color: #817ed3;
         }
         #message {
             margin-top: 20px;
             font-size: 1.2em;
         }
         footer {
-            background: #4CAF50;
+            background: #817ed3;
             color: white;
             text-align: center;
             padding: 10px 0;
